# pre-commit-matlab-lint

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  SECURITY.md  pyproject.toml  tox.ini
.github/: CODEOWNERS  settings.yml
.github/workflows/: check.yml  labels.yml  publish.yml  pull-test.yml  push-main.yml
docs/: conf.py  index.rst
precommitmatlablint/: __init__.py  cli.py  find_matlab.py  lint_matlab.py  linter_handle.py  linter_results.py  return_code.py  utility.py
tests/: __init__.py  matlab_info_cache.yaml  test_cli.py  test_find_matlab.py  test_lint_matlab.py  test_mlint_handle.py
tests/data/matlab/: clean_function.m  growing_array.m  growing_array_ok_pragma.m  invalid_char.m
tests/data/version_info/: VersionInfo.xml
