[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "precommitmatlablint"
version = "1.0.7"
description = "A pre-commit hook to validate MATLAB code."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Ty Cumby"},
]
maintainers = [
    {name = "Ty Cumby"},
]
keywords = ["matlab", "pre-commit", "linter"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "defusedxml>=0.7",
    "requests>=2.31",
    "pyyaml>=6.0",
    "tox>=4.25.0",
    "tomlkit>=0.13.3",
]

[project.urls]
Homepage = "https://github.com/ty.cumby/pre-commit-matlab-lint"
Repository = "https://github.com/ty.cumby/pre-commit-matlab-lint"
CI = "https://github.com/ty.cumby/pre-commit-matlab-lint/actions"
Issues = "https://github.com/ty.cumby/pre-commit-matlab-lint/issues"
Download = "https://pypi.org/project/precommitmatlablint/"

[project.scripts]
lint-matlab = "precommitmatlablint.lint_matlab:main"

[dependency-groups]
dev = [
    "bandit>=1.7",
    "coverage[toml]>=7.3",
    "defusedxml>=0.7",
    "ruff>=0.1",
    "pre-commit>=2.16",
    "pre-commit-hooks>=4.1",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "requests>=2.31",
    "sphinx>=4.0",
    "sphinx-autoapi>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-rtd-theme>=1.0",
    "tomlkit>=0.11",
    "hypothesis>=6",
    "xdoctest>=0.15,<2.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-defusedxml>=0.7.0.20250822",
    "pytest-xdist>=3.8.0",
    "mypy>=1.19.1",
]

[tool.uv]
managed = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.commitizen]
name = "cz_conventional_commits"

[tool.coverage.paths]
source = ["precommitmatlablint"]

[tool.coverage.run]
source = ["precommitmatlablint"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 100
target-version = ["py38", "py39"]

[tool.isort]
line_length = 100

[tool.mypy]
check_untyped_defs = true
strict_optional = true

[tool.bandit]
skips = ["B404", "B603"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = [
    "E203", "E225", "E301", "E302", "E501",
    "W391", "W293"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.pycodestyle]
max-line-length = 100
statistics = true

[tool.pydocstyle]
